--- a/experiments/CGAN/config.yaml
+++ b/experiments/CGAN/config.yaml
@@ -1,10 +1,10 @@
 data_path: ../data
 data_tag: cifar10
-lr: 0.0005
+lr: 0.001
 epoch: 1000
 load_epoch: -1
 bs: 64
-lr_milestone: [ 50, 100, 500, 1000 ]
+lr_milestone: [ 100, 500, 1000 ]
 num_workers: 4
 show_interval: 5
 snapshot_interval: 5
