--- a/experiments/p2p_wgan/config.yaml
+++ b/experiments/p2p_wgan/config.yaml
@@ -1,9 +1,9 @@
 data_path: ../data
 data_tag: coco_obj
-lr: 0.0001
+lr: 0.0002
 epoch: 100
 load_epoch: -1
-bs: 32
+bs: 16
 lr_milestone: [ 40, 80 ]
 num_workers: 3
 show_interval: 5
@@ -11,3 +11,6 @@ snapshot_interval: 1
 test_interval: 1
 gp_lambda: 10
 D_iter: 5
+image_size: 64
+lambda_l1: 0.
+lambda_ssim: 10.
