--- a/experiments/synthesis/post_1/config.yaml
+++ b/experiments/synthesis/post_1/config.yaml
@@ -4,7 +4,7 @@ lr: 0.0002
 epoch: 201
 load_epoch: -1
 bs: 64
-lr_milestone: [ 100 ]
+lr_milestone: [ 10, 50, 100 ]
 num_workers: 0
 show_interval: 10
 snapshot_interval: 5
@@ -16,5 +16,5 @@ image_size: 64
 lambda_l1: 1.
 lambda_mse: 0.
 lambda_ssim: 1.
-lambda_tv: 1.
+lambda_tv: 0.1
 classes: [ 1 ]
